# rust_zerotoprod

./: .env  Cargo.toml  Dockerfile  configuration.yaml  fly.toml
.sqlx/: query-26208a219bd1f87a27358f0e4df95d9e16729e5704d3981eeda901a09bbcc48c.json  query-3083d424c7e0b728565d6031de073fd67a3dfbddc1f7d0f246640a9aae176e07.json  query-4006175a016e8dd24dc8a9fdd68628cb8210b67b958ef52885710921916b2e81.json  query-645cb153070ca7ce35674eba7129c7db861fc468faec9738361eca91ed3b2312.json  query-6c98920383d90cd7e89354e2d96605f2d99874a63944aa8f973f1f5fea756b4c.json  query-6f8aadd2733b2d9c1c9890bf01688e5952598c410a80f6b32cc527ae6afeea78.json  query-6fbb8cef15813cd6d18c505b595fd16ce17e2f1ca3284405c5260d0b5970e12b.json  query-9056569963962b60253b0371e790f5a9cb4dde3fe157e78d6fa489ec0bd8d477.json  query-ba09b126ddbf3e1f15e1df7fd6576f9dfdd1347874ce318323267cc9704187c7.json  query-ceea52804d0a4579da965cdf3e70b1128588216eb88de39940aa46e6e9d03778.json  query-e47d562bf15b7c41d53f902371e21bee157cd9a3afe758c9ba8fcc0345050a2f.json  query-fb6767baddb4fa486c28f57150be772d04f1200ff5c94c607e8e6fdcb29cfe00.json
configuration/: base.yaml  production.yaml
migrations/: 20231008080502_create_subscriptions_table.sql  20231215041843_create_subscription_tokens_table.sql  20231218170157_seed_user.sql  20231226124551_create_idempotency_table.sql  20231226171319_create_newsletter_issues_table.sql  20231226171731_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  password.rs
src/domain/: application_base_url.rs  mod.rs  new_subscriber.rs  subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs  subscribers.rs
src/routes/admin/newsletter/: get.rs  issues.rs  mod.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: get.rs  login.html  post.rs
src/routes/subscriptions/: get.rs  mod.rs  post.rs
templates/: login.html  subscribe.html
templates/admin/: dashboard.html  newsletter.html  newsletter_issue.html  newsletter_issues.html  password.html  subscribers.html
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
