[package]
name = "zerotoprod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zerotoprod"

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
hyper = "0.14.27"
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_urlencoded = "0.7.1"
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
config = "0.13.3"
uuid = { version = "1.4.1", features = ["v4"] }
chrono = "0.4.31"
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-log = "0.2.0"
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace", "request-id", "util"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde-aux = "4.2.0"
opentelemetry = "0.21.0"
opentelemetry-otlp = { version = "0.14.0", features = ["tls-roots", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.21.1", features = ["rt-tokio"] }
tonic = "0.9.2"
tracing-opentelemetry = "0.22.0"
unicode-segmentation = "1.10.1"
validator = "0.16.1"
reqwest = {version = "0.11.22", features = ["json", "rustls-tls"] }
rand = { version = "0.8.5", features=["std_rng"] }

[dev-dependencies]
once_cell = "1.18.0"
claims = "0.7.1"
fake = "~2.3"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
wiremock = "0.5.22"
tokio = { version = "1.32.0", features = ["rt", "macros"] }
serde_json = "1.0.108"
nom = "6.1.2"
linkify = "0.10.0"

[target.aarch64-apple-darwin]
# for faster linking
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]

[profile.release]
strip = true
